css/mem.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.title {
    text-align: center;
    font-weight: bolder;
    color: rgb(15, 126, 115);
    font-size:50px
}
body {
    width: 100%;
    height: 100vh;
    margin: 0;
    padding: 0;
    display: flex;
    background: rgb(75, 13, 100);

   /* height: 80vh;
    display: flex;
    background: rgb(75, 13, 100);*/
}

.container {
    display: flex;
    justify-content: center;
    align-items:center;
    flex-direction:column;
}

.memory-game {
    width: 700px;
    height: 700px;
    margin: auto;
    margin-top : 10px;
    display: flex;
    flex-wrap: wrap; 
    perspective: 1000px;  
}

/*psuedo class learned about this last week with Judi */
.memory-card {
    width: calc(25% - 10px);
    height: calc(33.333% - 10px);
    margin: 5px;
    position: relative;
    transform: scale(1);
    transform-style: preserve-3d;
    transition: transform .5s;
}

.memory-card:active { 
    transform: scale(.97);
    transition: transform .2s;
}

.memory-card.flip{
    transform: rotateY(180deg);
}


.front-face,
.back-face {
    width: 100%;
    height: 100%;
    padding: 20px;
    position: absolute;
    border-radius: 5px;
    background: rgb(27, 131, 74);
    border: 2px solid rgba(90, 138, 228, 0.89);
    backface-visibility: hidden;
}

.front-face {
    transform:rotateY(180deg);
}

/*score panel*/

.scoreheader {
    text-align: left;
    width: 350;
    margin-bottom: 25px;
}

.scoreheader .stars {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 5px 0 0 ;
}
.scoreheader .stars li{
    list-style: none;
    display: inline-block;
    color: yellow;
}

.scoreheader .reset {
    float:right;
    cursor: pointer;
    
}

.scoreheader .moves {
font-size: 30px;
color:wheat;
}
.scoreheader .timer {
    font-size: 30px;
    color:white;
}

/*Modal*/

.hide {
    display:none;
}

